Search API 1.x, dev (xxxx-xx-xx):
---------------------------------
- #2230935 by shkiper, drunken monkey: Added the "search-api-server-clear"
  Drush command.

Search API 1.0 (2017-04-26):
----------------------------
- #2871145 by opdavies, drunken monkey, borisson_: Fixed link to php.net for
  PCRE reference.
- #2543472 by drunken monkey: Fixed indexing of multiple indexes via Drush.
- #2871549 by drunken monkey: Added note about backwards compatibility to
  README.txt.

Search API 1.0, RC 4 (2017-04-21):
----------------------------------
- #2869121 by drunken monkey: Fixed fatal error when required fulltext filter is
  in exposed form block.

Search API 1.0, RC 3 (2017-04-20):
----------------------------------
- #2869121 by drunken monkey, Wim Leers, wouter.adem, borisson_: Added improved
  "Required" handling for the Views "Fulltext search" filter.
- #2870782 by drunken monkey: Fixed the tests for Drupal 8.2.
- #2868851 by acbramley, drunken monkey: Fixed wrong interface used for loggers.
- #2868427 by dbjpanda, drunken monkey: Fixed use of d.o URL alias in
  README.txt.

Search API 1.0, RC 2 (2017-04-10):
----------------------------------
- #2846932 by drunken monkey, killua99, borisson_: Fixed error when changing
  boost values with a Postgres database backend.
- #2866454 by phenaproxima, drunken monkey: Fixed problems in update 8103.
- #2844945 by drunken monkey: Fixed uncaught exception when adding too many
  fields.

Search API 1.0, RC 1 (2017-04-09):
----------------------------------
- #2776659 by drunken monkey, drholera: Removed the deprecated Utility methods.
- #2268809 by drunken monkey: Converted all arrays in the code to use the short
  syntax.
- #2863736 by fran seva, drunken monkey: Added a setDataDefinition() method to
  the Field class.
- #2867118 by drunken monkey: Fixed reported coding standards problems.
- #2839932 by drunken monkey,  borisson_, bmcclure, jacktonkin: Fixed Views
  problems with "Rendered item" fields.